--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,8 @@ body{
   height: 100%;
   z-index: -1;
   object-fit: cover;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .content-container {
@@ -129,6 +131,12 @@ p {
 
   .card {
     padding: 20px;
+  }
+
+  .video-background {
+    height: 100vh;
+    width: 100vw;
+    object-position: center;
   }
 }
 
