--- a/src/App.css
+++ b/src/App.css
@@ -815,6 +815,7 @@ img {
     border-top: 1px solid rgba(255, 255, 255, 0.18);
     padding: 4rem 2rem 1rem 2rem;
     margin-top: 4rem;
+  color:white;
 }
 
 .footer-content {
