--- a/src/App.css
+++ b/src/App.css
@@ -911,7 +911,7 @@ img {
 }
 
 .footer-bottom p {
-    color: black;
+    color: white;
 }
 
 .footer-bottom-links {
@@ -920,7 +920,7 @@ img {
 }
 
 .footer-bottom-links a {
-    color: black;
+    color: white;
     text-decoration: none;
     transition: color 0.3s ease;
 }
